<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#008339"
    android:padding="8dp">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/category"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" />

    <EditText
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/numItems"
        android:layout_gravity="end"
        android:layout_below="@+id/category"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numItems"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/numItems"
        android:layout_toLeftOf="@+id/numItems"
        android:layout_alignTop="@+id/numItems"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="fill_vertical|right" />

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#00975d"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="6dp"
        android:background="#0000ab70"
        android:clickable="true"
        android:layout_below="@+id/numItems"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/confirm"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#00975d"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="6dp"
        android:background="#0000ab70"
        android:clickable="true"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp" />

    </android.support.v7.widget.CardView>

</RelativeLayout>